# colino-backend

./: .env.example  .flake8  .gitignore  DEPLOY.md  Makefile  README.md  build-lambda.sh  cli.py  deploy.sh  oauth_helper.py  pyproject.toml  pytest.ini  samconfig.toml  template.yaml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  ci.yml  codeql.yml  manual-deploy.yml  pr-checks.yml  security.yml
docs/: CI-CD-SETUP.md  OAUTH-FLOW.md
scripts/: deploy.sh  health-check.sh
src/lambdas/: auth_callback.py  auth_initiate.py  auth_poll.py  auth_refresh.py
src/shared/: config.py  response_utils.py  token_storage.py  youtube_client.py
tests/: test_auth_lambdas.py  test_auth_poll.py  test_auth_refresh.py
